# snitchit

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  TESTING.md  VERIFICATION.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
crates/agents/: CHANGELOG.md  Cargo.toml
crates/agents/src/: lib.rs
crates/agents/src/claude/: hook.rs  install.rs  mod.rs
crates/agents/src/opencode/: hook.rs  install.rs  mod.rs
crates/cli/: CHANGELOG.md  Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/cli/src/commands/: hook.rs  log.rs  mod.rs  run.rs  verify.rs  view.rs
crates/cli/src/commands/install/: mod.rs
crates/cli/src/commands/view_assets/: app.js  style.css
crates/cli/tests/: hook.rs  install_roundtrip.rs  resize.rs  signals.rs  view.rs  wrap.rs
crates/collectors/: CHANGELOG.md  Cargo.toml
crates/collectors/ebpf/: Cargo.toml  demo.sh  rust-toolchain.toml
crates/collectors/ebpf/src/: main.rs
crates/collectors/endpoint-security/: demo.sh
crates/collectors/src/: error.rs  lib.rs
crates/collectors/src/sources/: mod.rs  netfmt.rs
crates/collectors/src/sources/endpoint_security/: mod.rs
crates/collectors/src/sources/kernel/: mod.rs
crates/collectors/src/sources/macos_connect/: mod.rs
crates/collectors/src/sources/pty/: mod.rs  resolve.rs
crates/core/: CHANGELOG.md  Cargo.toml
crates/core/examples/: emit_chain.rs  emit_sample.rs
crates/core/src/: canon.rs  chain.rs  clock.rs  error.rs  event.rs  lib.rs  redact.rs  source.rs  store.rs
crates/core/tests/: halo_interop.rs
fixtures/: sample-session-broken.jsonl  sample-session.jsonl
scripts/: clone-context.sh
