[package]
name = "snitchit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Local-first, observe-only, tamper-evident recorder for terminal AI coding agents."
readme = "README.md"
keywords = ["ai", "agent", "audit", "tamper-evident", "security"]
categories = ["command-line-utilities", "development-tools"]
default-run = "snitchit"

[[bin]]
name = "snitchit"
path = "src/main.rs"

[dependencies]
snitchit-core.workspace = true
snitchit-collectors.workspace = true
snitchit-agents.workspace = true
anyhow.workspace = true
clap.workspace = true
crossbeam-channel.workspace = true
dirs.workspace = true
serde_json.workspace = true

[dev-dependencies]
# Used by tests/resize.rs to build an outer PTY harness (stands in for "the
# real terminal") so resize propagation can be exercised end-to-end headlessly.
portable-pty.workspace = true

[lints]
workspace = true
